[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/content/team_card.gd" id="1"]

[node name="TeamCard" type="PanelContainer"]
custom_minimum_size = Vector2(150, 80)
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 5

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="NameLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Team 1"

[node name="StatusLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
text = "Available"

[node name="RampUpBar" type="ProgressBar" parent="MarginContainer/VBox"]
visible = false
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
show_percentage = false
